--- a/website/template.html
+++ b/website/template.html
@@ -67,7 +67,7 @@
 
     // Pressing d triggers dark mode. This is useful for debugging.
     window.addEventListener('keypress', function(ev) {
-      if (String.fromCodePoint(ev.keyCode || ev.charCode) == 'd') {
+      if (String.fromCodePoint(ev.keyCode || ev.charCode) == 'D') {
         document.body.classList.toggle('dark');
       }
     });
@@ -75,28 +75,21 @@
 
   {{ if not $docsetMode }}
     <div id="navbar-container"> <div id="navbar">
-      <div id="site-title">
-        <code>
-          <a href="{{ rootURL }}/">
-            elvish
-          </a>
-        </code>
-      </div>
+      <a id="site-title" href="{{ rootURL }}/">
+        elvish
+      </a>
       <ul id="nav-list">
         {{ $homepageTitle := .HomepageTitle }}
         {{ $curcat := .Category }}
         {{ range $i, $info := .Categories }}
-          <li class="nav-item">
+          <li>
             <a href="{{ rootURL }}/{{ $info.Name }}/"
-               class="nav-link {{ if eq $curcat $info.Name}}current{{ end }}">
-              <code>
-                {{ $info.Name }}
-              </code>
+               class="{{ if eq $curcat $info.Name}}current{{ end }}">
+              {{ $info.Name }}
             </a>
           </li>
         {{ end }}
       </ul>
-      <div class="clear"></div>
     </div> </div>
   {{ end }}
 
@@ -162,7 +155,7 @@
 </html>
 
 {{ define "article-content" }}
-  <div class="content">
+  <div id="main">
     <article>
       {{ if not .IsHomepage }}
         <div class="article-title">
@@ -181,7 +174,7 @@
 
 {{ define "category-content" }}
   {{ $category := .Category }}
-  <div class="content category">
+  <div id="main" class="category">
     {{ if .Prelude }}
       <article>
         {{ .Prelude }}
